--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>alilo</title>
+	<title>Clean Code Space</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -38,12 +38,8 @@
 					<img class="myImage" src="mimage.jpg" alt="">
 				</div>
 				<div class="col-lg-12 col-md-12 " style="text-align:center; margin-top:50px;">
-					<h6>Hi there, </h6>
-					<h1>I'm alilo</h1>
-					<p>
-						I'm a Freelance Software Engineer from Algeria
-					</p>
-
+					<h6>Write Code like a Poem</h6>
+					<h1>Comming soon</h1>
 				</div>
 
 			</div>
